Bug 160929 - importing key from clipboard does not work
Summary: importing key from clipboard does not work
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-17 12:06 UTC by S. Burmeister
Modified: 2008-05-08 18:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2008-04-17 12:06:33 UTC
Version:            (using KDE 4.0.3)
Installed from:    SuSE RPMs
OS:                Linux

If I try to import a key from the clipboard this fails and does not give any details. If I use the same clipboard item with kgpg3 it imports the key without issues.
Comment 1 Rolf Eike Beer 2008-05-08 18:10:41 UTC
SVN commit 805442 by dakon:

Fix result filter when importing keys

This leads to an empty import message which causes an error message with empty 
log to be shown. Now the user thinks the key importing failed even if it was 
successful.

BUG:160929


 M  +1 -1      kgpginterface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=805442