Fix result filter when importing keys

This leads to an empty import message which causes an error message with empty 
log to be shown. Now the user thinks the key importing failed even if it was 
successful.

BUG:160929

svn path=/branches/KDE/4.0/kdeutils/kgpg/; revision=805442